# RoboticsDevelopWork2026

./: README.md
DataSource/: FileExplaination.txt
DataSource/DepthCamera/: get_imu_sample.cpp
DataSource/DepthCamera/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29/lib_aarch64/: libmoStereoCameraDriver.so.1.4
DataSource/DepthCamera/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29/sample/: get_dense_rgbd_sample.cpp  get_imu_sample.cpp  get_point_cloud_sample.cpp  get_raw_sample.cpp  get_rectify_sample.cpp  get_rgbd_sample.cpp
catkin_ws/devel/: .catkin
catkin_ws/devel/lib/code_utils/: matIO_test
catkin_ws/devel/lib/moak_camera/: cam_raw_publisher_gray8  get_imu_sample  get_raw_sample  get_rectify_sample  raw_publisher  run  usb_asic_cam  usb_raw
catkin_ws/devel/lib/pkgconfig/: code_utils.pc  imu_utils.pc  moak_camera.pc  my_robot_cam.pc
catkin_ws/devel/share/code_utils/cmake/: code_utilsConfig.cmake
catkin_ws/devel/share/imu_utils/cmake/: imu_utilsConfig.cmake
catkin_ws/devel/share/moak_camera/cmake/: moak_cameraConfig.cmake
catkin_ws/devel/share/my_robot_cam/cmake/: my_robot_camConfig.cmake
catkin_ws/src/code_utils/: CMakeLists.txt
catkin_ws/src/code_utils/src/: mat_io_test.cpp  sumpixel_test.cpp
catkin_ws/src/imu_utils/data/: data_myMono_acc_x.txt  data_myMono_acc_y.txt  data_myMono_acc_z.txt  data_myMono_gyr_x.txt  data_myMono_gyr_y.txt  data_myMono_gyr_z.txt  data_myMono_sim_acc_x.txt  data_myMono_sim_acc_y.txt  data_myMono_sim_acc_z.txt  data_myMono_sim_gyr_t.txt  data_myMono_sim_gyr_x.txt  data_myMono_sim_gyr_y.txt  data_myMono_sim_gyr_z.txt  myMono_imu_param.yaml
catkin_ws/src/imu_utils/data/monot_for_cam_imu/: imu_for_kalibr.yaml
catkin_ws/src/imu_utils/launch/: my_mono_imu.launch
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/: CMakeLists.txt
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/launch/: moasic.launch
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/lib/mo_stereo_camera_driver/include/mo_stereo_camera/: mo_stereo_camera_driver_c.h  mo_stereo_camera_driver_type_define.h
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/lib/mo_stereo_camera_driver/include/mo_stereo_camera_reserved/: mo_stereo_camera_driver_c_reserved.h
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/lib/mo_stereo_camera_driver/lib/: libmoStereoCameraDriver.so.1.4
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/lib/mo_stereo_camera_driver/lib_forArm/: libmoStereoCameraDriver.so.1.4
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/src/: common_function.cpp  get_imu_sample.cpp  get_imu_sample_backup.cpp  get_raw_sample.cpp  raw_publisher.cpp  run.cpp  usb_asic_cam.cpp  usb_raw.cpp
catkin_ws/src/mo_stereo_camera_driver_ros_v1.1.0/src/camera_calibration/: cam_raw_publisher_gray8.cpp  cam_rectify_publisher_gray8.cpp  cam_rectify_publisher_gray8_wrong.cpp
catkin_ws/src/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29_backup/include/mo_stereo_camera/: mo_stereo_camera_driver_c.h
catkin_ws/src/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29_backup/own_sample/: CMakeLists.txt  common_function.cpp  get_imu_sample.cpp
catkin_ws/src/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29_backup/sample/: CMakeLists.txt  get_multi_camera_sample.cpp  set_camera_sample.cpp
catkin_ws/src/mo_stereo_camera_driver_v1.4.7_alpha_release_22_11_29_backup/sample/include/: common_function.h
catkin_ws/src/my_robot_cam/: CMakeLists.txt
catkin_ws/src/my_robot_cam/src/: cam_check_mono2depth.py  test_extract_aprilgrid.py
catkin_ws/src/my_robot_cam/src/dataset/calibration_results/cal_final_campara/: left.yaml  right.yaml
catkin_ws/src/my_robot_cam/src/dataset/calibration_results/cal_test1/: left.yaml  ost.txt  right.yaml
catkin_ws/src/my_robot_cam/src/dataset/calibration_results/cal_test2/: left.yaml  ost.txt  right.yaml
catkin_ws/src/my_robot_cam/src/dataset/calibration_results/cal_test3/: ost.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_best_20260721/: best_log.txt  used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_final/: used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_0/: 2026-07-17-14-50-17-camchain.yaml
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_1/: 2026-07-17-14-50-17-results-cam.txt  used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_2/: final_for_calibration-camchain.yaml  final_for_calibration-camchain_forcamimu.yaml  final_for_calibration-camchain_mbaseline.yaml  final_for_calibration-camchain_mbaselineR.yaml  final_for_calibration-results-cam.txt  final_from_other.yaml  used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_3/: used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_4/: cam_final-camchain.yaml  cam_final-results-cam.txt  used_bag.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results/cal_test_5/: cam_final-camchain.yaml  cam_final-results-cam.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results_camimu/cal_best_20260721/: camimu_final-imu.yaml
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results_camimu/cal_final/: camimu_final-results-imucam.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/calibration_results_camimu/cal_test_0/: 2026-07-21-10-16-00-camchain-imucam.yaml  2026-07-21-10-16-00-results-imucam.txt
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/recorded_rosbag_camimu/: 2026-07-21-14-24-06-camchain-imucam.yaml  2026-07-21-14-24-06-results-imucam.txt  cam_imu_calib_test2-camchain-imucam.yaml
catkin_ws/src/my_robot_cam/src/dataset/cam_calibration/data/targets/: aprilgrid_6x6.yaml  checkerboard_9x6.yaml
catkin_ws/src/my_robot_cam/src/launch/: launch_nbv.py
(+15 files in other folders)
